force-app/main/default/objects/Contact/fields/AccountIndustry__c.field-meta.xml
<CustomField>
    <fullName>AccountIndustry__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>