force-app/main/default/objects/Contact/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>