force-app/main/default/objects/Contact/fields/IsLastSyncSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsLastSyncSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Sync Success</label>
    <type>Checkbox</type>
</CustomField>