force-app/main/default/objects/Contact/fields/LastSyncDate__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDate__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>