force-app/main/default/objects/Contact/fields/LastSyncMessage__c.field-meta.xml
<CustomField>
    <fullName>LastSyncMessage__c</fullName>
    <label>Last Sync Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>