force-app/main/default/objects/Contact/listViews/All_No_Integrated_Contacts.listView-meta.xml
<ListView>
    <fullName>All_No_Integrated_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>LastSyncDate__c</columns>
    <columns>LastSyncMessage__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsLastSyncSuccess__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LastSyncDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All No Integrated Contacts</label>
</ListView>